@@ -1,11 +1,11 @@
 <h1>{stockname}</h1>
-
-<button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-    Pick Stock..
-<span class="caret"></span></button>
-<ul class="dropdown-menu">
-    {stocklist} <!--List of stocks. Need to be wrapped in <li> tags-->
-</ul>
-
+<div class="dropdown">
+    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
+        Pick Stock..
+    <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+        {stocklist} <!--List of stocks. Need to be wrapped in <li> tags-->
+    </ul>
+</div>
 <div>{stockdata}</div>
         
